<resources>
    <string name="app_name">Movie Listings</string>
    <string name="enter_title_button">Enter Title</string>
    <string name="view_button">View</string>
    <string name="store_button">Store</string>
    <string name="load_button">Load</string>
    <string name="exit_button">Exit</string>
    <string name="movie_title_hint">Enter the movie\'s title</string>
    <string name="actor_name_hint">Enter the name of an actor</string>
    <string name="enter_year">Enter movie release year</string>
    <string name="add_movie_button">Add Movie</string>
    <string name="done_adding_button">Done</string>
    <string name="save_button">Save</string>
    <string name="enter_filename_prompt">Enter the filename for your movie list</string>
    <string name="filename_hint">filename</string>
    <string name="empty_filelist">No files yet</string>
</resources>
